# AI-research-and-development-py

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
langchain-mcp-adapter/: client.py  doc.md  math_server.py
langchain-mcp-adapter-with-rag/: client.py  doc_rag.py  documentation.md
server/src/: main.py
server/src/agent/: __init__.py  client.py  math_server.py
server/src/application/usecases/: __init__.py  analyse_useCase.py  perform_analysis_useCase.py
server/src/controllers/user/: user_controller.py
server/src/core/domain/repositories/: document.py
server/src/infrastructure/agent/: __init__.py  client.py
server/src/infrastructure/controllers/: __init__.py
server/src/infrastructure/controllers/analysis/: analysis_controller.py
server/src/infrastructure/controllers/perform_analysis/: perform_analysis_controller.py
server/src/infrastructure/controllers/user/: user_controller.py
server/src/infrastructure/routes/perform_analysis/: dependencies.py  perform_analysis.py
server/src/infrastructure/routes/perform_analysis/tests/: perform_analysis_test.py
