[project]
name = "research_and_development_py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastmcp>=0.4.1",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.7",
    "langgraph>=0.3.18",
    "mypy>=1.15.0",
    "pypdf>=5.4.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
]

